Fixing overflow width on mobile

--- a/css/media.css
+++ b/css/media.css
@@ -2,4 +2,11 @@
     .background-img{
         display:none;
     }
+    .welcome-text h1{
+        font-size: 3rem;
+    }
+    .welcome-text p{
+        font-size: 1.5rem;
+    }
+
 }
