--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,6 +32,7 @@ body {
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
     height: 50px;
     z-index: 999;
+    overflow: hidden;
 }
 .nav > ul {
     display: flex;
@@ -45,7 +46,6 @@ body {
 }
 .nav > ul > li{
     color: var(--main-white);
-    margin: 0 0.2rem;
     padding: 0.2rem;
     display: block;
     font-size:    1.5rem; 
@@ -94,7 +94,7 @@ section{
     color:  var(--main-white);
 }
 .welcome-text h1{
-    font-size:  6rem;
+    font-size:  4rem;
     
 }
 .welcome-text p{
